--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>Document</title>
 </head>
 <body>
+  <!--Site Title-->
+  <h1>Johnny Webster - Web Developer</h1>
+  <!---->
+
+  
   
 </body>
 </html>
